# Mirage

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Redshift.sln  WorldEngine.sln
Aether/include/aether/: image.hpp  kdtree.hpp  rayGeometry.hpp  rayscene.hpp  raytrace.hpp  trAABBTest.hpp
Aether/src/aether/: image.cpp  kdtree.cpp  main.cpp  rayGeometry.cpp  rayscene.cpp  raytrace.cpp  triAABBTest.cpp  triAABBTest.inl
Beam/include/beam/: image.hpp
Beam/src/beam/: image.cpp  main.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/include/engine/: main.h  main.hpp  planet.h  planet.hpp
Engine/shaders/: post.frag  post.vert  shader.frag  shader.vert  water.frag  water.vert
Engine/src/engine/: main.cpp  planet.cpp
Engine/src/redshiftEngine/: main.cpp  planet.cpp
Generate/: Generate.vcxproj  Generate.vcxproj.filters
Generate/include/generate/: mesh.h  mesh.hpp  noise.h  noise.hpp
Generate/src/generate/: mesh.cpp  noise.cpp
Hex/: Hex.vcxproj  Hex.vcxproj.filters
Hex/include/hexEngine/: hexCell.hpp
Hex/shaders/: hex.frag  hex.vert  post.frag
Hex/src/hexEngine/: hexCell.cpp  main.cpp
Mirage/include/aether/: aether.hpp  image.hpp  kdtree.hpp  raytrace.hpp  triAABBTest.hpp
Mirage/include/render/: gl.hpp  texture.hpp
Mirage/include/utility/: fbxLoader.hpp  geometry.hpp  objLoader.hpp
Mirage/inline/render/: gl.inl
Mirage/src/aether/: aether.cpp  kdtree.cpp  raytrace.cpp
Mirage/src/mirage/: main.cpp
Mirage/src/render/: display.cpp  mtlLoader.cpp  program.cpp  texture.cpp
Mirage/src/utility/: fbxLoader.cpp
Redshift/: Redshift.vcxproj  Redshift.vcxproj.filters
Redshift/src/redshift/: main.cpp  planet.cpp
Render/: Render.vcxproj  Render.vcxproj.filters
Render/include/arrayBuffer/: arrayBuffer.hpp  vertexBuffer.hpp
Render/include/display/: display.hpp  geometry.hpp  gl.hpp  model.hpp  mtlLoader.hpp  objLoader.hpp  program.hpp  texture.hpp
Render/include/model/: indexArray.h  indexArray.hpp  instance.h  instance.hpp  model.h  model.hpp  vertexArray.h  vertexArray.hpp  virtualVector.h  virtualVector.hpp
Render/include/render/: attributeSpecifier.h  display.h  display.hpp  model.h  program.h  program.hpp
Render/include/shader/: program.hpp
Render/src/arrayBuffer/: arrayBuffer.cpp  vertexBuffer.cpp
Render/src/display/: display.cpp  geometry.cpp  gl.inl  model.cpp  mtlLoader.cpp  objLoader.cpp  program.cpp  texture.cpp
Render/src/model/: indexArray.cpp  instance.cpp  model.cpp  vertexArray.cpp  virtualVector.cpp
Render/src/render/: attributeSpecifier.cpp  display.cpp  model.cpp  program.cpp
Render/src/shader/: program.cpp
Render/src/texture/: texture.cpp
Terra/include/terra/: generate.hpp
Terra/src/terra/: generate.cpp  main.cpp
Tools/: Tools.vcxproj  Tools.vcxproj.filters
Tools/include/tools/: tests.h
Tools/src/tools/: main.cpp  tests.cpp
Utility/: Utility.vcxproj  Utility.vcxproj.filters
Utility/include/utility/: debug.h  geometry.hpp  io.h  io.hpp  math.h  objLoader.hpp  resource.hpp  utility.hpp
Utility/src/utility/: debug.cpp  fbxLoader.cpp  io.cpp  objLoader.cpp
resources/models/brick/: brick.fbx
resources/models/floor/: floor.mtl
resources/models/gargoyle/: gargoyle.mtl
resources/models/statue/: statue.fbx
resources/models/wall/: wall.fbx
resources/shaders/: aether.frag  model.frag  model.vert
shaders/: model.frag  model.vert
